fix: header text overflow fixed

--- a/styles.css
+++ b/styles.css
@@ -15,13 +15,12 @@ body{
 .header{
     width: auto;
     background-color: var(--primary-color);
-    padding: 1rem;
-    height: 10vh;
     border-radius: 0rem 0rem 1rem 1rem;
 }
 .heading{
     text-align: center;
     font-size: x-large;
+    padding: 1rem;
 }
 .main-img{
     display: block;
